Added deploy script

--- a/src/index.html
+++ b/src/index.html
@@ -252,7 +252,7 @@
       class="bg-[url('./images/noise.png')] bg-center w-full h-full absolute top-0 left-0 pointer-events-none"
     ></div>
 
-    <script type="module" src="./scripts/particles.min.js"></script>
-    <script type="module" src="./scripts/home.js"></script>
+    <script src="./scripts/particles.min.js"></script>
+    <script src="./scripts/home.js"></script>
   </body>
 </html>
