--- a/src/index.html
+++ b/src/index.html
@@ -2,8 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      http-equiv="X-UA-Compatible"
+      content="IE=edge"
+    />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0"
+    />
 
     <title>HaoVA</title>
 
@@ -77,24 +83,43 @@
       sizes="16x16"
       href="./favicons/favicon-16x16.png"
     />
-    <link rel="manifest" href="./favicons/manifest.json" />
-    <meta name="msapplication-TileColor" content="#ffffff" />
+    <link
+      rel="manifest"
+      href="./favicons/manifest.json"
+    />
+    <meta
+      name="msapplication-TileColor"
+      content="#ffffff"
+    />
     <meta
       name="msapplication-TileImage"
       content="./favicons/ms-icon-144x144.png"
     />
-    <meta name="theme-color" content="#ffffff" />
+    <meta
+      name="theme-color"
+      content="#ffffff"
+    />
     <!-- end favicon -->
 
     <!-- fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;700&family=Paytone+One&display=swap"
+      rel="preconnect"
+      href="https://fonts.googleapis.com"
+    />
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+      crossorigin
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;700&family=Paytone+One&display=swap"
       rel="stylesheet"
     />
     <!-- fonts -->
-    <link href="./index.css" rel="stylesheet" />
+    <link
+      href="./index.css"
+      rel="stylesheet"
+    />
   </head>
   <body
     class="overflow-x-hidden w-full bg-[url('./images/background.png')] font-sans bg-center"
@@ -112,7 +137,7 @@
       >
         <!-- header -->
         <div
-          class="flex justify-between items-center p-4 fixed top-0 left-0 w-full md:static md:mb-12 lg:mb-24 lg:justify-start"
+          class="flex justify-between items-center p-4 fixed top-0 left-0 w-full md:static md:mb-12 lg:mb-24 lg:justify-start z-10"
         >
           <img
             src="./images/haova-logo-square-red-small.png"
@@ -121,7 +146,7 @@
           />
 
           <h1
-            class="flex text-lg uppercase tracking-wider md:text-xl lg:text-3xl lg:mr-12 xl:text-4xl"
+            class="font-heading flex text-lg uppercase tracking-wider md:text-xl lg:text-3xl lg:mr-12 xl:text-4xl"
           >
             <span
               class="after:content-['First\00a0Name'] after:text-[.3rem] text-center after:block after:font-sans after:leading-4 px-1 md:after:text-[.4rem] lg:after:text-[.5rem] xl:after:text-xs xl:px-2 xl:after:leading-8"
@@ -137,8 +162,8 @@
             >
           </h1>
           <div class="text-xs lg:text-base xl:text-lg">
-            <span class="">aka</span>
-            <h2 class="inline">HaoVA</h2>
+            <span class="">aka</span>&nbsp;
+            <h2 class="font-heading inline">HaoVA</h2>
           </div>
         </div>
         <!-- end header -->
@@ -154,7 +179,7 @@
             <a
               href="/blog"
               class="relative block mt-2 before:block before:w-2 before:h-2 before:border-2 before:border-black before:rounded-full before:absolute before:top-1.5 before:left-0 pl-6 hover:font-bold hover:before:bg-black lg:before:top-2 xl:before:top-2.5"
-              >Blog (vi)</a
+              >Blog</a
             >
             <!-- <a
               href="/"
@@ -178,7 +203,10 @@
           <div
             class="p-4 flex justify-end fixed bottom-0 right-0 w-full md:static md:mt-12 lg:pb-0 xl:mt-16"
           >
-            <a href="mailto:hi@haova.me" target="_blank">
+            <a
+              href="mailto:hi@haova.me"
+              target="_blank"
+            >
               <img
                 src="./icons/mail.svg"
                 alt="HaoVA's Email"
@@ -186,7 +214,10 @@
               />
             </a>
 
-            <a href="https://github.com/haova" target="_blank">
+            <a
+              href="https://github.com/haova"
+              target="_blank"
+            >
               <img
                 src="./icons/logo-github.svg"
                 alt="HaoVA's Github"
@@ -194,7 +225,10 @@
               />
             </a>
 
-            <a href="https://youtube.com/@haova" target="_blank">
+            <a
+              href="https://youtube.com/@haova"
+              target="_blank"
+            >
               <img
                 src="./icons/logo-youtube.svg"
                 alt="HaoVA's Youtube"
@@ -202,7 +236,10 @@
               />
             </a>
 
-            <a href="https://linkedin.com/in/anhhao" target="_blank">
+            <a
+              href="https://linkedin.com/in/anhhao"
+              target="_blank"
+            >
               <img
                 src="./icons/logo-linkedin.svg"
                 alt="HaoVA's Linkedin"
@@ -210,7 +247,10 @@
               />
             </a>
 
-            <a href="https://www.facebook.com/haova.me/" target="_blank">
+            <a
+              href="https://www.facebook.com/haova.me/"
+              target="_blank"
+            >
               <img
                 src="./icons/logo-facebook.svg"
                 alt="HaoVA's Facebook"
@@ -218,7 +258,10 @@
               />
             </a>
 
-            <a href="https://www.instagram.com/haova.me/" target="_blank">
+            <a
+              href="https://www.instagram.com/haova.me/"
+              target="_blank"
+            >
               <img
                 src="./icons/logo-instagram.svg"
                 alt="HaoVA's Instagram"
@@ -235,6 +278,7 @@
         class="px-4 h-full flex items-end justify-end relative md:w-1/2 lg:w-1/3 xl:justify-center"
       >
         <img
+          id="target"
           src="./images/personal-half-body.png"
           alt="HaoVA's body"
           class="mt-auto xl:max-w-xl"
@@ -249,10 +293,12 @@
     </div>
 
     <div
-      class="bg-[url('./images/noise.png')] bg-center w-full h-full absolute top-0 left-0 pointer-events-none"
+      class="bg-[url('./images/noise.png')] bg-center w-full h-full absolute top-0 left-0 pointer-events-none z-10"
     ></div>
 
     <script src="./scripts/particles.min.js"></script>
     <script src="./scripts/home.js"></script>
+    <script src="./scripts/pixi.min.js"></script>
+    <script src="./scripts/greeting.js"></script>
   </body>
 </html>
