Update blog view

--- a/src/index.html
+++ b/src/index.html
@@ -130,14 +130,14 @@
     ></div>
 
     <div
-      class="h-[calc(100vh-8.3rem)] overflow-hidden flex items-end justify-between mt-20 md:h-[calc(100vh-5rem)] max-w-[1920px] mx-auto xl:mt-32 xl:h-[calc(100vh-8rem)]"
+      class="h-[calc(100vh-7rem)] absolute w-full bottom-[3.5rem] md:static overflow-hidden flex items-end justify-between pt-20 md:h-screen max-w-[1920px] mx-auto xl:pt-32"
     >
       <div
         class="md:w-1/2 md:flex md:flex-col md:justify-end md:h-full lg:p-12 lg:w-2/3 xl:p-24"
       >
         <!-- header -->
         <div
-          class="flex justify-between items-center p-4 fixed top-0 left-0 w-full md:static md:mb-12 lg:mb-24 lg:justify-start z-10"
+          class="flex justify-between items-center p-4 fixed top-0 left-0 w-full md:static lg:justify-start z-10"
         >
           <img
             src="./images/haova-logo-square-red-small.png"
@@ -168,7 +168,17 @@
         </div>
         <!-- end header -->
 
-        <div class="lg:flex lg:items-end lg:mb-4">
+        <!-- quote -->
+        <p
+          class="hidden p-4 text-xs text-center md:block md:static lg:text-left lg:my-4 lg:text-base lg:max-w-xl xl:max-w-2xl xl:my-8 xl:text-lg z-10"
+        >
+          I guess you want to change the world but don't know where to start, is
+          it right? Luckily, me too. However, I believe that we can do
+          everything. Contact me and paint our world.
+        </p>
+        <!-- end quote -->
+
+        <div class="mt-4 lg:flex lg:flex-wrap lg:items-end lg:mb-4">
           <!-- navigations -->
           <div class="px-4 text-sm lg:text-base xl:text-lg whitespace-nowrap">
             <a
