--- a/src/parts/footer.ejs.html
+++ b/src/parts/footer.ejs.html
@@ -7,7 +7,6 @@
 >
   <img
     class="w-4 h-4"
-    src="/icons/chevron-up-sharp.svg"
+    src="../icons/chevron-up-sharp.svg"
   />
 </a>
-<%= htmlWebpackPlugin.tags.bodyTags %>
