--- a/src/index.html
+++ b/src/index.html
@@ -122,7 +122,7 @@
     />
   </head>
   <body
-    class="overflow-x-hidden w-full bg-[url('./images/background.png')] font-sans bg-center"
+    class="overflow-x-hidden w-full bg-[url('/images/background.png')] font-sans bg-center"
   >
     <div
       id="particles-js"
@@ -140,7 +140,7 @@
           class="flex justify-between items-center p-4 fixed top-0 left-0 w-full md:static lg:justify-start z-10"
         >
           <img
-            src="./images/haova-logo-square-red-small.png"
+            src="/images/haova-logo-square-red-small.png"
             alt="HaoVA's logo"
             class="w-8 h-8 md:w-10 md:h-10 lg:w-12 lg:h-12 lg:mr-12 xl:w-20 xl:h-20"
           />
@@ -306,9 +306,16 @@
       class="bg-[url('./images/noise.png')] bg-center w-full h-full absolute top-0 left-0 pointer-events-none z-10"
     ></div>
 
-    <script src="./scripts/particles.min.js"></script>
-    <script src="./scripts/home.js"></script>
-    <script src="./scripts/pixi.min.js"></script>
-    <script src="./scripts/greeting.js"></script>
+    <script src="/scripts/particles.min.js"></script>
+    <script src="/scripts/pixi.min.js"></script>
+
+    <script
+      type="module"
+      src="./scripts/home.js"
+    ></script>
+    <script
+      type="module"
+      src="./scripts/greeting.js"
+    ></script>
   </body>
 </html>
