--- a/src/index.html
+++ b/src/index.html
@@ -289,7 +289,7 @@
       >
         <img
           id="target"
-          src="./images/personal-half-body.png"
+          src="/images/personal-half-body.png"
           alt="HaoVA's body"
           class="mt-auto xl:max-w-xl"
         />
@@ -303,7 +303,7 @@
     </div>
 
     <div
-      class="bg-[url('./images/noise.png')] bg-center w-full h-full absolute top-0 left-0 pointer-events-none z-10"
+      class="bg-[url('/images/noise.png')] bg-center w-full h-full absolute top-0 left-0 pointer-events-none z-10"
     ></div>
 
     <script src="/scripts/particles.min.js"></script>
