--- a/src/cv.html
+++ b/src/cv.html
@@ -2,18 +2,34 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      http-equiv="X-UA-Compatible"
+      content="IE=edge"
+    />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0"
+    />
 
     <title>HaoVA's CV</title>
 
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      rel="preconnect"
+      href="https://fonts.googleapis.com"
+    />
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+      crossorigin
+    />
     <link
       href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;600;700&display=swap"
       rel="stylesheet"
     />
-    <link href="./index.css" rel="stylesheet" />
+    <link
+      href="./index.css"
+      rel="stylesheet"
+    />
   </head>
   <body class="tp-4 bg-gray-100 p-4 lg:p-12 print:p-0 print:bg-white">
     <div class="text-center mb-8 underline print:hidden">
@@ -27,7 +43,7 @@
       <!-- Background -->
       <img
         class="absolute top-[-15rem] md:top-[-30rem] left-0 scale-[2] lg:scale-100 lg:top-[-25rem] lg:left-[-20rem] print:scale-100 print:top-[-25rem] print:left-[-20rem] -rotate-30 z-0 w-full h-auto select-none pointer-events-none"
-        src="./images/bg.svg"
+        src="/images/bg.svg"
       />
       <!-- End Background -->
 
@@ -38,7 +54,7 @@
         >
           <div class="rounded-full overflow-hidden bg-white p-4 z-10">
             <img
-              src="./images/haova-photo.png"
+              src="/images/haova-photo.png"
               class="rounded-full bg-gray-300"
             />
           </div>
@@ -1080,7 +1096,10 @@
               <div class="font-semibold">2022/05 - now</div>
               <div class="font-bold text-base">FPT Software company</div>
               <div class="italic mt-1 text-xs flex items-center">
-                <img class="w-3 h-3 mr-1" src="./icons/person-sharp.svg" />
+                <img
+                  class="w-3 h-3 mr-1"
+                  src="./icons/person-sharp.svg"
+                />
                 Developer
               </div>
             </div>
@@ -1113,7 +1132,10 @@
               <div class="font-semibold">2021/12 - 2022/03</div>
               <div class="font-bold text-base">Port.tools project</div>
               <div class="italic mt-1 text-xs flex items-center">
-                <img class="w-3 h-3 mr-1" src="./icons/person-sharp.svg" />
+                <img
+                  class="w-3 h-3 mr-1"
+                  src="./icons/person-sharp.svg"
+                />
                 Freelancer
               </div>
             </div>
@@ -1138,7 +1160,10 @@
               <div class="font-semibold">2021/08 - 2022/10</div>
               <div class="font-bold text-base">Your Idioms</div>
               <div class="italic mt-1 text-xs flex items-center">
-                <img class="w-3 h-3 mr-1" src="./icons/person-sharp.svg" />
+                <img
+                  class="w-3 h-3 mr-1"
+                  src="./icons/person-sharp.svg"
+                />
                 Freelancer
               </div>
             </div>
@@ -1163,7 +1188,10 @@
               <div class="font-semibold">2021/06 - now</div>
               <div class="font-bold text-base">Rugo project</div>
               <div class="italic mt-1 text-xs flex items-center">
-                <img class="w-3 h-3 mr-1" src="./icons/person-sharp.svg" />
+                <img
+                  class="w-3 h-3 mr-1"
+                  src="./icons/person-sharp.svg"
+                />
                 Product Owner/Developer
               </div>
             </div>
@@ -1195,7 +1223,10 @@
               <div class="font-semibold">2020/03 - 2020/04</div>
               <div class="font-bold text-base">Azseo company</div>
               <div class="italic mt-1 text-xs flex items-center">
-                <img class="w-3 h-3 mr-1" src="./icons/person-sharp.svg" />
+                <img
+                  class="w-3 h-3 mr-1"
+                  src="./icons/person-sharp.svg"
+                />
                 Developer
               </div>
             </div>
@@ -1225,7 +1256,10 @@
               <div class="font-semibold">2019/12 - 2020/12</div>
               <div class="font-bold text-base">Fast Ecom company</div>
               <div class="italic mt-1 text-xs flex items-center">
-                <img class="w-3 h-3 mr-1" src="./icons/person-sharp.svg" />
+                <img
+                  class="w-3 h-3 mr-1"
+                  src="./icons/person-sharp.svg"
+                />
                 Developer/Team Leader
               </div>
             </div>
@@ -1290,6 +1324,9 @@
       </button>
     </div>
 
-    <script type="module" src="./scripts/print.js"></script>
+    <script
+      type="module"
+      src="./scripts/print.js"
+    ></script>
   </body>
 </html>
