Update meta tags

--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,40 @@
 
     <title>HaoVA</title>
 
+    <meta
+      property="og:title"
+      content="HaoVA"
+    />
+    <meta
+      property="og:type"
+      content="article"
+    />
+    <meta
+      property="og:image"
+      content="/images/haova-logo-square-black-small.png"
+    />
+    <meta
+      property="og:url"
+      content="https://www.haova.me/"
+    />
+    <meta
+      name="twitter:card"
+      content="summary_large_image"
+    />
+
+    <meta
+      property="og:description"
+      content="Welcome to my website. I'm HaoVA (Vũ Anh Hào)."
+    />
+    <meta
+      property="og:site_name"
+      content="HaoVA"
+    />
+    <meta
+      name="twitter:image:alt"
+      content="HaoVA"
+    />
+
     <!-- favicon -->
     <link
       rel="apple-touch-icon"
